@@ -522,7 +522,7 @@ static void free_config(struct config *config) {
 
 /** set up stuff, e.g. sockets, pipes, daemonize */
 static void setup(struct config *config, int *randomfdp, int *sockfdp) {
-    int ret, sockfd;
+    int ret, sockfd, yes = 1;
 #ifndef DISABLE_DAEMON_CODE
     int parentfd = -1, loggerfd = -1;
     pid_t logger_pid = -1;
@@ -545,6 +545,14 @@ static void setup(struct config *config, int *randomfdp, int *sockfdp) {
     sockfd = socket(PF_INET, SOCK_STREAM, 0);
     if (sockfd < 0) {
         fprintf(stderr, "failed to create socket: %s\n",
+                strerror(errno));
+        exit(1);
+    }
+
+    /* get rid of the "Address already in use" errors */
+    ret = setsockopt(sockfd, SOL_SOCKET, SO_REUSEADDR, &yes, sizeof(yes));
+    if (ret < 0) {
+        fprintf(stderr, "setsockopt failed: %s\n",
                 strerror(errno));
         exit(1);
     }
