@@ -4,6 +4,7 @@ uoamhub (0.9.1) unstable; urgency=low
   * fixed long pid_t warnings
   * use random() if /dev/random does not exist
   * include netinet/in.h for FreeBSD compatibility
+  * enable SO_REUSEADDR to get rid of the "Address already in use" errors
 
  --
 
